--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-﻿<!---_______________________________DOWNLOAD __________________________-->
+﻿
+
+
+<center>
+<!---_______________________________DOWNLOAD __________________________-->
 <!---_______________________________DOWNLOAD __________________________-->
 <a href="
 https://www.googleapis.com/drive/v3/files/1WDWV4H9IZiE6vbNEYkuLRGU4lODE4CWz?alt=media&key=AIzaSyCKN01YADpHeKX5_sO5KhC0XyYYiHQoV_c
@@ -29,3 +33,6 @@ NOME
 LINKFONTE
 " target="_blank">FONTE</a><br/>
 <!---_______________________________DOWNLOAD __________________________-->
+
+
+</center>
