--- a/index.html
+++ b/index.html
@@ -6,32 +6,26 @@
 <!---_______________________________DOWNLOAD __________________________-->
 <a href="
 https://www.googleapis.com/drive/v3/files/1WDWV4H9IZiE6vbNEYkuLRGU4lODE4CWz?alt=media&key=AIzaSyCKN01YADpHeKX5_sO5KhC0XyYYiHQoV_c
-" download="teste_visualdicas"><h2>DOWNLOADS DO 
+" download="teste_visualdicas"><h2>🔴DOWNLOADS DO 
 FORMAT FACTORYzip
 </h2></a><br/><!---_______________________________DOWNLOAD __________________________-->
 <a href="
 LINK
-" download="teste_visualdicas"><h2>DOWNLOADS DO 
+" download="teste_visualdicas"><h2>🔴DOWNLOADS DO 
 NOME
-</h2></a><a href="
-LINKFONTE
-" target="_blank">FONTE</a><br/>
+</h2></a><br/>
 <!---_______________________________DOWNLOAD __________________________-->
 <a href="
 LINK
-" download="teste_visualdicas"><h2>DOWNLOADS DO 
+" download="teste_visualdicas"><h2>🔴DOWNLOADS DO 
 NOME
-</h2></a><a href="
-LINKFONTE
-" target="_blank">FONTE</a><br/>
+</h2></a><br/>
 <!---_______________________________DOWNLOAD __________________________-->
 <a href="
 LINK
-" download="teste_visualdicas"><h2>DOWNLOADS DO 
+" download="teste_visualdicas"><h2>🔴DOWNLOADS DO 
 NOME
-</h2></a><a href="
-LINKFONTE
-" target="_blank">FONTE</a><br/>
+</h2></a><br/>
 <!---_______________________________DOWNLOAD __________________________-->
 
 
