--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@ https://www.googleapis.com/drive/v3/files/1WDWV4H9IZiE6vbNEYkuLRGU4lODE4CWz?alt=
 FORMAT FACTORYzip
 </h2></a><br/><!---_______________________________DOWNLOAD __________________________-->
 <a href="
-LINK
+https://www.googleapis.com/drive/v3/files/1jQr4CBu4QV6TinaTtClCxZO3WJFPKtZI?alt=media&key=AIzaSyCKN01YADpHeKX5_sO5KhC0XyYYiHQoV_c
 " download="teste_visualdicas"><h2>🔴DOWNLOADS DO 
-NOME
+SITE POR BUSCA
 </h2></a><br/>
 <!---_______________________________DOWNLOAD __________________________-->
 <a href="
-LINK
+https://www.googleapis.com/drive/v3/files/1PIYP9U_U8znoa-Kw2Apgr4b003sejDH4?alt=media&key=AIzaSyCKN01YADpHeKX5_sO5KhC0XyYYiHQoV_c
 " download="teste_visualdicas"><h2>🔴DOWNLOADS DO 
-NOME
+LINKBUSCA
 </h2></a><br/>
 <!---_______________________________DOWNLOAD __________________________-->
 <a href="
